# tft-loaded-dice

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  export_json.py  output.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
my_package/: example.py
tests/: test_example.py  test_main.py
tft_loaded_dice/: __init__.py  consts.py  data.json  exceptions.py  main.py
