[tool.poetry]
name = "tft-loaded-dice"
version = "11.22.1"
description = "Loaded dice odds for Teamfight Tactics"
authors = ["Xiang Chen <xiangchenchen96@gmail.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/stradivari96/tft-loaded-dice"
keywords = ["tft", "python", "teamfight tactics", "loaded dice"]

# Pypi classifiers: https://pypi.org/classifiers/
# Add "Private :: Do Not Upload" to avoid accidental publish
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

